# c_misc_lib

./: .gitignore  readme.txt
code/lua-5.2.4b/: CMakeLists.txt
code/my_templ/: .gitignore  CMakeLists.txt  readme.md
code/my_templ/demos/: CMakeLists.txt  unxtar.c  xtar.c
code/my_templ/include/: list.h  xtar.h  xtar_list.h  zal_tests.h
code/my_templ/include/common/: zal_common.h  zal_debug.h  zal_tests.h
code/my_templ/src/: xtar.c  xtar_list.c
code/my_templ/tests/: CMakeLists.txt  main.c  test_main.h  test_xtar.c
code/my_templ/tests/utils/: test_utils.c  test_utils.h
doc/: awesome_c.md  awesome_cpp.md  readme.md
